added the code for randomize images

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <div class="flex">
       
     </div>
+    <button type="submit" onclick="resetImages()" >Reset</button>
     
+<div class="show">
 
+</div>
     <script src="script.js"></script>
 </body>
 </html>
