completed with the functionalities required

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <div class="flex">
       
     </div>
-    <button type="submit" onclick="resetImages()" >Reset</button>
+    <button type="submit" onclick="resetImages()" id="reset-btn" >Reset</button>
+    <button type="submit" onclick="verifyImages()"  id ="verify-btn">Verify</button>
     
-<div class="show">
+<div id="show">
 
 </div>
     <script src="script.js"></script>
